--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Yusuke Hirao</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="平尾友佑のホームページです．">
-<meta name="keywords" content="平尾友佑,原田研究室,基礎工学部">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/fixmenu_pagetop.js"></script>
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>平尾友佑のホームページ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="平尾友佑のホームページです．">
+    <meta name="keywords" content="平尾友佑,原田研究室,基礎工学部">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/fixmenu_pagetop.js"></script>
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <link rel="preload" href="../images/header_slide/header_slide1.jpg" as="image">
+    <link rel="preload" href="../images/header_slide/header_slide2.jpg" as="image">
+    <link rel="preload" href="../images/header_slide/header_slide3.jpg" as="image">
 </head>
 
 <body>
@@ -20,12 +23,13 @@
 <header>
 <h1 id="logo"><a href="index.html"><img src="images/my_logo.png" alt="Yusuke Hirao's logo"></a></h1>
 <nav id="menubar">
-<ul>
-<li><a href="#new">What's New</a></li>
-<li><a href="#profile">Profile</a></li>
-<li><a href="#research">Research</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
+    <ul>
+        <li><a href="#new"><font size="5">What's New</font></a></li>
+        <li><a href="#profile"><font size="5">Profile</font></a></li>
+        <li><a href="#research"><font size="5">Research</font></a></li>
+        <li><a href="#conference"><font size="5">Conference</font></a></li>
+        <li><a href="#contact"><font size="5">Contact</font></a></li>
+    </ul>
 </nav>
 </header>
 
@@ -38,14 +42,22 @@
 
 <h2>What's New</h2>
 <dl>
-<dt>2022/04/〇〇</dt>
-<dd>ホームページを更新しました．</dd>
-<dt>2022/03/24</dt>
-<dd>大阪大学基礎工学部システム科学科を卒業しました．</dd>
-<dt>2021/04/28</dt>
-<dd>ホームページの掲載を開始しました．</dd>
-<dt>2021/04/09</dt>
-<dd>大阪大学基礎工学部システム科学科原田研究室に配属されました．</dd>
+    <dt>2023/02/10</dt>
+    <dd>Cyborg and Bionic Systemsに論文が掲載されました．</dd>
+    <dt>2022/07/05</dt>
+    <dd>日刊工業新聞様に<a href="https://www.nikkan.co.jp/spaces/view/0065860"><font color="blue">自身の研究についての記事</font></a>を掲載していただきました．</dd>
+    <dt>2022/06/01~04</dt>
+    <dd>ロボティクス・メカトロニクス講演会2022にて，ポスター発表を行いました．</dd>
+    <dt>2022/04/20</dt>
+    <dd>ホームページデザインを更新しました．</dd>
+    <dt>2022/04/05</dt>
+    <dd>大阪大学基礎工学研究科システム創成専攻に入学しました．</dd>
+    <dt>2022/03/24</dt>
+    <dd>大阪大学基礎工学部システム科学科を卒業しました．</dd>
+    <dt>2021/04/28</dt>
+    <dd>ホームページの掲載を開始しました．</dd>
+    <dt>2021/04/09</dt>
+    <dd>大阪大学基礎工学部システム科学科原田研究室に配属しました．</dd>
 </dl>
 
 </section>
@@ -60,14 +72,14 @@
     <li><img src="images/sample3.jpg"></li>
 </ul> -->
 <div class="prof">
-<img src="images/web_prof_edited.JPG" alt="">
+<img src="images/prof.png" style="display: block; margin: auto;" />
 
 <table>
   <tr><th>氏名</th><td>平尾　友佑</td></tr>
   <tr><th>出身地</th><td>大阪府</td></tr>
   <tr><th>所属</th><td>大阪大学基礎工学研究科システム創成専攻　原田研究室</td></tr>
   <tr><th>出身高校</th><td>私立　開明高等学校</td></tr>
-  <tr><th>趣味</th><td>ドライブ，料理，etc.</td></tr>
+  <tr><th>趣味</th><td>ドライブ，料理</td></tr>
 </table>
 
 </div>
@@ -81,29 +93,59 @@
 <h2>Research</h2>
 
 <div class="res">
-<img src="images/Research/Research_koujichu.png" alt="">
-<h4><b>掲載開始までお待ち下さい</b></h4>
-<p>2022/04/08現在，研究内容の論文が公表されておらず，掲載不可能です．掲載までしばらくお待ち下さい．</p>
+    <h4><b>二台の移動型マニピュレータの遠隔操作システム開発</b></h4>
+    <p>
+        近年，工場の生産ラインや物流倉庫において移動型マニピュレータの導入が進行しています．
+        現場でトラブルが発生した際，付近のロボットを遠隔操作して対応を行うことで，省人化や作業の効率化が期待されます．
+        本研究では，一人の操作者が二台の移動型マニピュレータを操作するシステムの開発を目指します．
+        二台を同時に操作することで，幅広い作業への対応が期待されます．
+    </p>
+    <iframe width="280" height="560" src="https://www.youtube.com/embed/1fuNwEYStaM"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    </iframe>
 </div>
 
 </section>
 <!--/#research-->
 
+<section id="conference">
+
+<h2>Conference</h2>
+<div class="conf">
+    <div style="height:300px">
+        <h4><b>ロボティクス・メカトロニクス講演会2022</b></h4>
+        <img src="images/robomech2022.png" style="display: block; margin: auto;" />
+        <button onclick="window.open('https://robomech.org/2022/')" style="background-color:#AFEEEE;">ロボティクス・メカトロニクス講演会2022 公式ホームページ</button>
+        <p>
+            「二台の移動マニピュレータを用いた双腕テレオペレーション」の題でポスター発表を行いました．
+        </p>
+    </div>
+        <hr>
+        <h4><b>Cyborg and Bionic Systems</b></h4>
+        <button onclick="window.open('https://spj.science.org/journal/cbsystems')" style="background-color:#AFEEEE;">Cyborg and Bionic Systems 公式ホームページ</button>
+        <button onclick="window.open('https://spj.science.org/doi/10.34133/cbsystems.0014')" style="background-color:#FFFFFF;">論文はこちら</button>
+        <p>
+            「Body Extension by Using Two Mobile Manipulators」の題で論文を投稿し，掲載されました．</p>
+    </div>
+</section>
 
 <section id="contact">
 
 <h2>Contact</h2>
 <p class="c">お問い合わせは以下までお願い致します。<br></p>
+<hr>
 <p class="c"><font size="5" color="#0000CC">電話・メール</font></p>
-<p class="c"><img src="images/tel.png" alt="" width="30%"></p>
+<p class="c"><img src="images/tel.png" alt="" width="250"></p>
 <p class="c"><font size="4" color="#ff0000"><a href="mailto:hirao&#64;hlab.sys.es.osak-u.ac.jp">hirao&#64;hlab.sys.es.osak-u.ac.jp</a></font></p>
+<hr>
 <p class="c"><font size="5" color="#DC143C">研究室へのアクセス</font></p>
-<p class="c"><font size="4" color="#ff0000"><a href="https://www.roboticmanipulation.org/">https://www.roboticmanipulation.org/</a></font></p>
-<p class="c"><font size="5">大阪大学基礎工学研究科F棟531-533</font></p>
+<p class="c"><font size="4" color="#ff0000"><a href="https://www.roboticmanipulation.org/">原田研究室 ホームページ</a></font></p>
+<p class="c"><font size="4">大阪大学基礎工学研究科F棟531-533</font></p>
 <div class="googlemap">
 <p class="c"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d669.1068433974162!2d135.45602861502553!3d34.803667769356885!
   2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000fa8710d95fa1%3A0x73ba84fb4c2418b1!2z5aSn6Ziq5aSn5a2mIOWfuuekjuW3peWtpumDqOODu-Wkp-
-  WtpumZouWfuuekjuW3peWtpueglOeptuenkQ!5e0!3m2!1sja!2sjp!4v1649398790506!5m2!1sja!2sjp" width="1200" height="600" style="border:0;" 
+  WtpumZouWfuuekjuW3peWtpueglOeptuenkQ!5e0!3m2!1sja!2sjp!4v1649398790506!5m2!1sja!2sjp" width="1200" height="500" style="border:0;" 
   allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 </div>
 
@@ -130,3 +172,4 @@
 
 </body>
 </html>
+
