--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="preload" href="images/header_slide/header_slide1.jpg" as="image">
-    <link rel="preload" href="images/header_slide/header_slide2.jpg" as="image">
-    <link rel="preload" href="images/header_slide/header_slide3.jpg" as="image">
+    <link rel="preload" href="../images/header_slide/header_slide1.jpg" as="image">
+    <link rel="preload" href="../images/header_slide/header_slide2.jpg" as="image">
+    <link rel="preload" href="../images/header_slide/header_slide3.jpg" as="image">
 </head>
 
 <body>
