--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <hr>
 <p class="c"><font size="5" color="#0000CC">電話・メール</font></p>
 <p class="c"><img src="images/tel.png" alt="" width="250"></p>
-<p class="c"><font size="4" color="#ff0000"><a href="mailto:hirao&#64;hlab.sys.es.osak-u.ac.jp">hirao&#64;hlab.sys.es.osak-u.ac.jp</a></font></p>
+<p class="c"><font size="4" color="#ff0000"><a href="mailto:hirao&#64;hlab.sys.es.osaka-u.ac.jp">hirao&#64;hlab.sys.es.osaka-u.ac.jp</a></font></p>
 <hr>
 <p class="c"><font size="5" color="#DC143C">研究室へのアクセス</font></p>
 <p class="c"><font size="4" color="#ff0000"><a href="https://www.roboticmanipulation.org/">原田研究室 ホームページ</a></font></p>
@@ -172,4 +172,3 @@
 
 </body>
 </html>
-
